Add tikz graphs generated from pyplot. Move SSVEP figure to right place. Move signal processing section to second chapter. Improve detrend section.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -7,7 +7,9 @@
 %\usepackage{mathtools}					% for curly braces under equation. Also includes amsmath.
 \usepackage[inline,shortlabels]{enumitem}% for alphabetical enumerate or inline list.
 \usepackage[pdftitle={Control a Robot via VEP Using Emotiv EPOC},pdfauthor={Anti Ingel},hidelinks]{hyperref}
-%\usepackage{pgfplots}
+\usepackage{pgfplots}
+\pgfplotsset{compat = 1.3}
+\usepgfplotslibrary{groupplots}
 \usepackage{tikz-timing}
 %\usetikztiminglibrary{nicetabs} 
 
