--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -148,7 +148,7 @@ When the visual stimulus is seen, the signal travels from the eyes to the \gls{v
 		\caption{The primary visual pathway~\cite[p.~261]{neuroscience}}
 		\label{fig:visual_pathway}
 	\end{subfigure}
-	\caption{The location of occipital lobe and the neural pathway from eyes to the lobe}
+	\caption{The neural pathway from eyes to the occipital lobe}
 	\label{fig:lobes_pathway}
 \end{figure}
 
@@ -160,16 +160,16 @@ When comparing the \glspl{VEP} elicited by
 	\item the stimulation of the \gls{peripheral vision}
 \end{enumerate*} by the same stimuli, it can be seen that the stimulation of the \gls{central visual field} produces larger \glspl{VEP}~\cite{VEP_size}. In other words, the stimulus which a subject is looking at elicits larger \glspl{VEP} than those stimuli that are not in the very centre of the gaze. Therefore, it is possible to present multiple visual stimuli to a subject and detect which stimulus is the subject looking at. 
 
-To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visual stimulus is presented at a constant rate and the rate is so fast that the visual pathway does not have enough time to fully recover between stimulus presentations, then the elicited response becomes continuous and it is called the \gls{SSVEP}~\cite{VEP}. In a broad sense, \gls{SSVEP} is composed of many \glspl{VEP} that are elicited one after another in a certain rate. See figure~\ref{fig:ssvep} for an example of \gls{VEP} and \gls{SSVEP}.
+To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visual stimulus is presented at a constant rate and the rate is so fast that the visual pathway does not have enough time to fully recover between stimulus presentations, then the elicited response becomes continuous and it is called the \gls{SSVEP}~\cite{VEP}. See figure~\ref{fig:ssvep} for an example of \glspl{VEP} and \glspl{SSVEP}.
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.75\textwidth]{ssvep.png}
-	\caption{VEP and SSVEP~\cite[p.~259]{VEP}}
+	\includegraphics[width=0.7\textwidth]{ssvep.png}
+	\caption{VEPs and SSVEPs~\cite[p.~259]{VEP}}
 	\label{fig:ssvep}
 \end{figure}
 
-\gls{SSVEP} is continuous and therefore it is easier to detect it in the \gls{EEG} recording than \glspl{VEP}, which are not continuous. Detecting continuous response is easier and more efficient because it is always present in the recording. Thus usually \glspl{SSVEP} are elicited instead of \glspl{VEP} when the goal is to efficiently communicate with external device through brain responses to visual stimuli. %This thesis also focuses on \gls{SSVEP}-based methods used to extract information from \gls{EEG} recording.
+\gls{SSVEP} is composed of \glspl{VEP} that are elicited one after another in a certain rate. \gls{SSVEP} is continuous and therefore it is easier to detect it in the \gls{EEG} recording than \glspl{VEP}, which are not continuous. Detecting continuous response is easier and more efficient because it is always present in the recording. Thus usually \glspl{SSVEP} are elicited instead of \glspl{VEP} when the goal is to efficiently communicate with external device through brain responses to visual stimuli. %This thesis also focuses on \gls{SSVEP}-based methods used to extract information from \gls{EEG} recording.
 
 %Thus the kind of response that is elicited in the brain depends on the visual stimulus. 
 
