--- a/thesis/tikz/square_wave.tex
+++ b/thesis/tikz/square_wave.tex
@@ -1,3 +1,13 @@
+% This file was created by matplotlib v0.1.0.
+% Copyright (c) 2010--2014, Nico Schlömer <nico.schloemer@gmail.com>
+% All rights reserved.
+% 
+% The lastest updates can be retrieved from
+% 
+% https://github.com/nschloe/matplotlib2tikz
+% 
+% where you can also submit bug reports and leavecomments.
+% 
 \begin{tikzpicture}[scale=0.9]
 
 \begin{groupplot}[group style={group size=2 by 1, horizontal sep=50pt}]
@@ -7,7 +17,9 @@ ymin=-1.5, ymax=1.5,
 axis on top,
 xlabel = Time,
 ylabel = Signal,
-ylabel shift = -10 pt
+ylabel shift = -10 pt,
+enlarge x limits = 0.05,
+enlarge y limits = 0.05
 ]
 \addplot [blue]
 coordinates {
@@ -434,75 +446,72 @@ coordinates {
 \path [draw=black, fill opacity=0] (axis cs:0,13)--(axis cs:0,13);
 
 \nextgroupplot[
-xmin=0, xmax=25,
-ymin=0, ymax=70,
+xmin=0, xmax=20,
+ymin=0, ymax=1,
 axis on top,
 xlabel = Frequency,
-ylabel = Power
+ylabel = Amplitude,
+enlarge x limits = 0.05,
+enlarge y limits = 0.05
 ]
+
+\addplot [black, mark=*]
+coordinates {
+(6,0.0295455422582101)
+(6.5,0.0392699081698724)
+(7,0.0392699081698724)
+(7.5,0.134046551478503)
+(8,0.0392699081698724)
+(8.5,0.0392699081698725)
+(9,0.0392699081698724)
+(9.5,0.0999922819240693)
+(10,0.0392699081698724)
+(10.5,0.0392699081698724)
+(11,0.0392699081698724)
+(11.5,0.0777287820956132)
+(12,0.0392699081698724)
+(12.5,0.0392699081698724)
+(13,0.0392699081698724)
+(13.5,0.0621172398460391)
+(14,0.0392699081698723)
+(14.5,0.0392699081698724)
+(15,0.0392699081698724)
+(15.5,0.0509948373917945)
+(16,0.0392699081698724)
+(16.5,0.0392699081698724)
+(17,0.0392699081698724)
+(17.5,0.0435621932489829)
+(18,0.0392699081698724)
+(18.5,0.0392699081698724)
+(19,0.0392699081698724)
+(19.5,0.0397534041144176)
+(20,0.0392699081698724)
+
+};
+
+\addplot [red, mark=*]
+coordinates {
+(4,0.0291487323922272)
+(4.5,0.0101247851443722)
+(5,0.0204727312731035)
+(5.5,0.193408492248942)
+(6,0.0295455422582101)
+
+};
 \addplot [blue, mark=*]
 coordinates {
-(1,0.83381680094494)
-(1.5,63.2987054999032)
-(2,1.56902171829699)
+(1,0.016292922345932)
+(1.5,0.992637301349993)
+(2,0.0310182748004185)
+(2.5,0.00953818939550112)
 
 };
 \addplot [green!50.0!black, mark=*]
 coordinates {
-(2.5,0.491601573140882)
-(3,1.08758352163889)
-(3.5,20.9841162664781)
-(4,1.46169450514291)
-
-};
-\addplot [red, mark=*]
-coordinates {
-(4.5,0.528572319626104)
-(5,1.07847832710172)
-(5.5,12.4524998632764)
-(6,1.47146088186163)
-
-};
-\addplot [black, mark=*]
-coordinates {
-(6.5,2)
-(7,2)
-(7.5,8.73254578928233)
-(8,2)
-(8.5,2)
-(9,2)
-(9.5,6.6126924237509)
-(10,2)
-(10.5,2)
-(11,2)
-(11.5,5.23248154727187)
-(12,2)
-(12.5,2)
-(13,2)
-(13.5,4.2555157428114)
-(14,1.99999999999999)
-(14.5,2)
-(15,2)
-(15.5,3.52786404500042)
-(16,2)
-(16.5,2)
-(17,2)
-(17.5,2.97248765207217)
-(18,2)
-(18.5,2)
-(19,2)
-(19.5,2.5511063894727)
-(20,2)
-(20.5,2)
-(21,2)
-(21.5,2.24828406955805)
-(22,2)
-(22.5,2)
-(23,2)
-(23.5,2.06284894981122)
-(24,2)
-(24.5,2)
-(25,2)
+(2.5,0.00953818939550112)
+(3,0.0209766408288386)
+(3.5,0.328023460602311)
+(4,0.0291487323922272)
 
 };
 \path [draw=black, fill opacity=0] (axis cs:13,70)--(axis cs:13,70);
