Add windowing picture. Rename chapter titles. Finish signal processing section. Add mbox to square. Add references to pictures.

--- a/thesis/tex/SSVEP_BCI.tex
+++ b/thesis/tex/SSVEP_BCI.tex
@@ -32,13 +32,13 @@ In this thesis, Emotiv EPOC is used to record brain activity. The following pape
 \end{itemize}
 %This thesis focuses on two of these methods: \gls{PSDA} and \gls{CCA} methods.
 
-\section{Signal pipeline}
+\section{Signal pipeline of the application}
 \label{sec:signal_pipeline}
 
 % phase in CCA
 The phase information from the frequency spectrum can be used to make correct reference signals in \gls{CCA} method. Then it would not be necessary to use both sine and cosine waves and the correlation would be more accurate.
 
-\section{Target identification}
+\section{Target identification method}
 asd
-\section{The robot}
+\section{Controlling the robot with the application}
 asd
